--- a/index.html
+++ b/index.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>PromptMotion</title>
+  <meta charset="UTF-8">
+  <title>Manim Prompt Generator</title>
   <style>
-    body { font-family: sans-serif; max-width: 600px; margin: 2em auto; }
+    body { font-family: sans-serif; padding: 2em; max-width: 600px; margin: auto; }
     textarea { width: 100%; height: 100px; }
-    button { padding: 0.5em 1em; }
-    #response { white-space: pre-wrap; margin-top: 1em; background: #f5f5f5; padding: 1em; }
+    button { margin-top: 1em; padding: 0.5em 1em; }
+    #output { white-space: pre-wrap; background: #eee; padding: 1em; margin-top: 1em; }
   </style>
 </head>
 <body>
-  <h1>PromptMotion</h1>
-  <textarea id="prompt" placeholder="Describe your animation…"></textarea><br/>
-  <button id="send">Generate Code</button>
-  <div id="response"></div>
+  <h2>Describe the animation you want:</h2>
+  <textarea id="prompt" placeholder="e.g., a ball bouncing across the screen…"></textarea><br>
+  <button onclick="sendPrompt()">Generate</button>
+  <div id="output">Code will appear here…</div>
 
   <script>
-    document.getElementById("send").onclick = async () => {
-      const prompt = document.getElementById("prompt").value.trim();
-      if (!prompt) return alert("Please enter a prompt.");
-      document.getElementById("response").textContent = "…working…";
+    async function sendPrompt() {
+      const prompt = document.getElementById("prompt").value;
+      document.getElementById("output").innerText = "Generating…";
       try {
-        const res = await fetch("/api/generate", {
+        const res = await fetch("http://127.0.0.1:8000/api/generate", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ prompt })
+          body: JSON.stringify({ prompt }),
         });
         const { code, error } = await res.json();
-        document.getElementById("response").textContent = error || code;
-      } catch (e) {
-        document.getElementById("response").textContent = "Network error.";
+        document.getElementById("output").innerText = error || code;
+      } catch (err) {
+        document.getElementById("output").innerText = "Error connecting to backend.";
       }
-    };
+    }
   </script>
 </body>
 </html>
